fixing about bottom gap

--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -112,11 +112,11 @@ header .menu, header nav.mobile {
   line-height: 1.5;
   float: left;
   position: relative;
-  padding-top: 20px;
-  padding-bottom: 0px;
-  margin-bottom: 20px;
+
 
 }
+
+
 
 .about-blurb h3 {
   text-transform: uppercase;
